nginx config public path fixed
Signed-off-by: HalFtaN <half.a.tan@gmail.com>

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,7 +5,7 @@ upstream backend {
 server {
     listen 80 default;
     server_name *.azusasoft.org *.azusasoft.com;
-    root /var/www/backend/public;
+    root /home/halftan/rails/lenit/public;
     access_log /home/halftan/rails/lenit/log/nginx_access.log;
     error_log /home/halftan/rails/lenit/log/nginx_error.log;
     rewrite_log on;
